<resources>
    <string name="app_name">Voti</string>
    <string name="lorem_ipsum_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_dummy_title">Lorem Ipsum</string>
    <string name="title_login_account">Sudah Memiliki Akun?</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_dont_have_account">Belum memiliki akun?</string>
    <string name="title_register">Daftar</string>
    <string name="title_created_by">Created by HMIF UMMI 2021</string>
    <string name="title_register_account">Daftar akun</string>
    <string name="title_nim">Nim</string>
    <string name="title_name">Nama</string>
    <string name="title_force">Angkatan</string>
    <string name="title_semester">Semester</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_already_have_an_account">Sudah memiliki akun?</string>
    <string name="title_welcome_home"><b>Hai</b>, Selamat datang</string>
    <string name="title_show_current_statistic">Lihat Statistik terkini</string>
    <string name="title_choose_candidate">Pilih calon Ketua Himpunan</string>
    <string name="title_logout">Keluar</string>
    <string name="title_succes_register_account">Sukses Membuat akun!</string>
    <string name="title_something_wrong">Oops something wrong occurred!</string>
    <string name="title_alert_email">Email tidak valid!</string>
    <string name="title_alert_password">Password kurang dari 7 karakter!</string>
    <string name="title_alert_nim">Nim tidak valid!</string>
    <string name="title_alert_nama">Nama tidak valid!</string>
    <string name="title_alert_angkatan">Isi angkatan terlebih dahulu!</string>
    <string name="title_alert_confirm_password">Password tidak sesuai!</string>
    <string name="title_alert_already_vote">Anda hanya bisa melakukan 1x voting!</string>
    <string name="title_alert_semester">Isi email terlebih dahulu!</string>

    <!--  TapTarget  -->
    <string name="title_taptarget_logout">Logout</string>
    <string name="title_taptarget_statistic">Statistik Calon Ketua Himpunan</string>
    <string name="title_taptarget_calonkahim">Calon Ketua Himpunan</string>

    <string name="description_taptarget_logout">Klik disini untuk keluar dari akun anda</string>
    <string name="description_taptarget_statistic">Klik disini untuk melihat statistik calon ketua himpunan</string>
    <string name="description_taptarget_calonkahim">Klik disini untuk memilih calon ketua himpunan</string>

    <string name="title_let_vote">Ayo mulai voting pilihanmu!</string>

    <!--  About  -->
    <string name="title_hmif_description">HMIF UMMI adalah organisasi yang berkedudukan dibawah Program Studi Teknik Informatika Fakultas Sains dan Teknologi Universitas Muhammadiyah Sukabumi</string>
    <string name="title_hmif_visi">Mewujudkan Himpunan Mahasiswa Teknik Informatika yang propesional dalam keilmuan serta menjungjung solidaritas dengan didasari nilai-nilai keislaman.</string>
    <string name="title_hmif_misi_1">Meningkatkan ketaqwaan terhadap Tuhan yang maha Esa</string>
    <string name="title_hmif_misi_2">Meningkatkan skill ke-informatikaan bagi mahasiswa Teknik Informatika.</string>
    <string name="title_hmif_misi_3">Menciptakan keharmonisan seluruh elemen jurusan Teknik Informatika.</string>
    <string name="title_hmif_misi_4">Menumbuhkan rasa tanggung jawab serta cinta terhadap Himpunan.</string>
</resources>